<resources xmlns:tools="http://schemas.android.com/tools" tools:locale="en">

    <string name="app_name" translatable="false">Keepchat</string>
    <string name="keepchat_settings">Keepchat Settings</string>
    <string name="xposed_description">Save any snap and story, both images and videos, you either sent or receive via Snapchat.</string>

    <!-- Saving settings -->
    <string name="pref_category_snapchats">Saving</string>
    <string name="pref_save_snapchats_default" translatable="false">0</string>

    <string name="pref_save_snaps_images">Image snaps</string>
    <string name="pref_save_snaps_videos">Video snaps</string>

    <string name="pref_save_stories_images">Image stories</string>
    <string name="pref_save_stories_videos">Video stories</string>

    <string name="pref_save_sent_snaps_title">Sent snaps</string>
    <string name="pref_save_sent_snaps_summary_on">Sent snaps will be saved</string>
    <string name="pref_save_sent_snaps_summary_off">Sent snaps won\'t be saved</string>

    <string-array name="pref_save_mode_entries">
        <item>Save automatically</item>
        <item>Sweep to save</item>
        <item>Don\'t save</item>
    </string-array>
    <string-array name="pref_save_mode_values" translatable="false">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>

    <!-- Toasts -->
    <string name="pref_category_toasts">Toasts</string>

    <string name="pref_toasts_title">Show toast messages</string>
    <string name="pref_toasts_summary_on">Toast messages are enabled</string>
    <string name="pref_toasts_summary_off">Toast messages are disabled</string>


    <string name="pref_toasts_duration_title">Toast duration</string>
    <string name="pref_toasts_duration_default_value" translatable="false">0</string>

    <string-array name="pref_toasts_duration_entries">
        <item>Short</item>
        <item>Long</item>
    </string-array>
    <string-array name="pref_toasts_duration_values" translatable="false">
        <item>0</item>
        <item>1</item>
    </string-array>


    <string name="pref_timer_minimum_title">Minimum timer duration</string>
    <string name="pref_timer_minimum_default_value" translatable="false">0</string>

    <string-array name="pref_timer_minimum_entries">
        <item>Disabled</item>
        <item>3 seconds</item>
        <item>5 seconds</item>
        <item>7 seconds</item>
        <item>10 seconds</item>
    </string-array>
    <string-array name="pref_timer_minimum_values" translatable="false">
        <item>0</item>
        <item>3</item>
        <item>5</item>
        <item>7</item>
        <item>10</item>
    </string-array>


    <!-- Folder settings -->
    <string name="pref_category_folder">Folder</string>

    <string name="pref_save_location_title">Saving location</string>

    <string name="pref_sort_files_mode_title">Sort files by category</string>
    <string name="pref_sort_files_mode_summary_on">Snaps and stories will be saved into different folders</string>
    <string name="pref_sort_files_mode_summary_off">Snaps and stories will be sorted into the same folder</string>

    <string name="pref_sort_files_username_title">Sort files by sender</string>
    <string name="pref_sort_files_username_summary_on">Files will be sorted into a subfolder foreach sender</string>
    <string name="pref_sort_files_username_summary_off">Files will be sorted into the same folder foreach sender</string>

    <!-- Other settings -->
    <string name="pref_other">Other</string>

    <string name="pref_launcher_title">Show app in launcher</string>
    <string name="pref_launcher_on">Access settings through my launcher</string>
    <string name="pref_launcher_off">Access settings through Xposed Installer</string>

    <string name="pref_debug_mode_title">Debugging</string>
    <string name="pref_debug_mode_summary_on">Debug information is shown in the Xposed Log</string>
    <string name="pref_debug_mode_summary_off">Debug information is not shown in the Xposed Log</string>

    <!-- About section -->
    <string name="pref_about">About</string>
    <string name="pref_about_title" translatable="false">Keepchat v%1$s</string>
    <string name="pref_about_summary">Keepchat is released under the GPLv3 license.</string>

    <string name="pref_donate_title">Donate</string>
    <string name="pref_donate_summary">Support me, buy me a beer using PayPal. Donations are highly appreciated.</string>

    <string name="pref_support_title">Support</string>
    <string name="pref_support_summary">Navigate to the XDA-thread, please read the OP first if you\'re facing problems.</string>

    <!-- Ask to Save dialog -->
    <string name="save_dialog_title_image">Save image</string>
    <string name="save_dialog_title_video">Save video</string>

    <string name="save_dialog_message_image">Would you like to save this image?</string>
    <string name="save_dialog_message_video">Would you like to save this video?</string>

    <string name="save_button">Save</string>
    <string name="discard_button">Discard</string>

    <!-- Toast messages -->
    <string name="image_exists">This image already exists.</string>
    <string name="video_exists">This video already exists.</string>

    <string name="image_saved">This image has been saved.</string>
    <string name="video_saved">This video has been saved.</string>
    
    <string name="image_not_saved">An error occurred while saving this image.</string>
    <string name="video_not_saved">An error occurred while saving this video.</string>
</resources>
