<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/pref_category_snapchats">
        <com.ramis.keepchat.BetterListPreference
            android:defaultValue="@string/pref_save_snapchats_default"
            android:dialogTitle="@string/pref_save_snaps_images"
            android:entries="@array/pref_snaps_entries"
            android:entryValues="@array/pref_snaps_values"
            android:key="pref_key_snaps_images"
            android:title="@string/pref_save_snaps_images" />

        <com.ramis.keepchat.BetterListPreference
            android:defaultValue="@string/pref_save_snapchats_default"
            android:dialogTitle="@string/pref_save_snaps_videos"
            android:entries="@array/pref_snaps_entries"
            android:entryValues="@array/pref_snaps_values"
            android:key="pref_key_snaps_videos"
            android:title="@string/pref_save_snaps_videos" />

        <com.ramis.keepchat.BetterListPreference
            android:defaultValue="@string/pref_save_snapchats_default"
            android:dialogTitle="@string/pref_save_stories_images"
            android:entries="@array/pref_stories_entries"
            android:entryValues="@array/pref_stories_values"
            android:key="pref_key_stories_images"
            android:title="@string/pref_save_stories_images" />

        <com.ramis.keepchat.BetterListPreference
            android:defaultValue="@string/pref_save_snapchats_default"
            android:dialogTitle="@string/pref_save_stories_videos"
            android:entries="@array/pref_stories_entries"
            android:entryValues="@array/pref_stories_values"
            android:key="pref_key_stories_videos"
            android:title="@string/pref_save_stories_videos" />

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="pref_key_save_sent_snaps"
            android:summaryOff="@string/pref_save_sent_snaps_summary_off"
            android:summaryOn="@string/pref_save_sent_snaps_summary_on"
            android:title="@string/pref_save_sent_snaps_title" />
    </PreferenceCategory>
    
    <PreferenceCategory android:title="@string/pref_category_toasts">
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="pref_key_toasts_checkbox"
            android:summaryOff="@string/pref_toasts_summary_off"
            android:summaryOn="@string/pref_toasts_summary_on"
            android:title="@string/pref_toasts_title" />

        <com.ramis.keepchat.BetterListPreference
            android:defaultValue="@string/pref_toasts_duration_default_value"
            android:dependency="pref_key_toasts_checkbox"
            android:entries="@array/pref_toasts_duration_entries"
            android:entryValues="@array/pref_toasts_duration_values"
            android:key="pref_key_toasts_duration"
            android:title="@string/pref_toasts_duration_title" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_category_folder">
        <Preference
            android:defaultValue="-1"
            android:key="pref_key_save_location"
            android:persistent="true"
            android:title="@string/pref_save_location_title" />

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="pref_key_sort_files_mode"
            android:summaryOff="@string/pref_sort_files_mode_summary_off"
            android:summaryOn="@string/pref_sort_files_mode_summary_on"
            android:title="@string/pref_sort_files_mode_title" />

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="pref_key_sort_files_username"
            android:summaryOff="@string/pref_sort_files_username_summary_off"
            android:summaryOn="@string/pref_sort_files_username_summary_on"
            android:title="@string/pref_sort_files_username_title" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_other">
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="pref_launcher"
            android:summaryOff="@string/pref_launcher_off"
            android:summaryOn="@string/pref_launcher_on"
            android:title="@string/pref_launcher_title" />

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="pref_key_debug_mode"
            android:summaryOff="@string/pref_debug_mode_summary_off"
            android:summaryOn="@string/pref_debug_mode_summary_on"
            android:title="@string/pref_debug_mode_title" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_about">
        <Preference
            android:key="pref_about"
            android:title="@string/app_name"
            android:summary="@string/pref_about_summary" />

        <Preference
            android:key="pref_donate"
            android:title="@string/pref_donate_title"
            android:summary="@string/pref_donate_summary">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&amp;hosted_button_id=ATAND4ZD4HZ62"/>
        </Preference>

        <Preference
            android:key="pref_support"
            android:title="@string/pref_support_title"
            android:summary="@string/pref_support_summary">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="http://forum.xda-developers.com/xposed/modules/mod-keepchat-save-snapchats-t2917209"/>
        </Preference>
    </PreferenceCategory>

</PreferenceScreen>
